--- a/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/function.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/function.html
@@ -461,6 +461,19 @@
     reveStr("shubham meshram");
 
 
+    function reveStr2(str) {
+        let store = ""
+        for(let i = str.length -1; i >= 0; i--){
+            store += str[i];
+        }
+
+        console.log(store)
+
+    };
+
+    reveStr2("mobile");
+
+
     // 7.What is a higher - order function in JavaScript ?
 
     // 7.A higher - order function is a function that takes another function as an argument or returns a function as a result.
