practise register form with api

--- a/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
@@ -1147,6 +1147,15 @@
             console.log("mostly true statement")
         }
 
+        // practise
+        let user1 = true
+        let std2 = false
+        if(user1 === true && std2 === true){
+            console.log(`both are is true`)
+        }else{
+            console.log("not is true")
+        }
+
 
         // 18.Question: How can you write an if statement that checks for both a truthy value and a specific condition ? Answer :
 
