--- a/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/Practise.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/Practise.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body{
+        body {
             background-color: #2b2a2a;
             color: #b6b0b0;
         }
     </style>
 </head>
+
 <body>
     <h1>Practise</h1>
-    
+
     <script>
         // conditional statemet
         // 5.Question: How can you check if a number is even or odd using a conditional statement?Answer:
 
         let num = 10;
-        if(num % 2 ===0){
+        if (num % 2 === 0) {
             console.log("is even")
-        }else{
+        } else {
             console.log("is odd")
         }
 
@@ -29,7 +31,7 @@
 
         let items = "banana";
 
-        switch(items){
+        switch (items) {
             case "apple":
             case "banana":
                 console.log("fruits items");
@@ -45,7 +47,7 @@
         // 15.Question: How do you use a ternary operator to check if a value is null and assign a fallback value ? Answer :
 
         let user = "shubham";
-        
+
         let res = user !== undefined ? user : "user is not defind";
         // console.log(res)
 
@@ -54,7 +56,7 @@
         // 4. Reverse a string using a loop.
         let str = "shubham";
         let reversStr = ""
-        for(let i = str.length -1; i >= 0; i--){
+        for (let i = str.length - 1; i >= 0; i--) {
             // console.log(str[i])
             reversStr += str[i]
         }
@@ -63,7 +65,7 @@
 
         // 6.Print the factorial of a number(e.g., 5!).
         let storeFactrial = 0;
-        for(let i = 10; i >= 1 ; i--){
+        for (let i = 10; i >= 1; i--) {
             // console.log(i)
             storeFactrial += i
         }
@@ -93,9 +95,9 @@
 
         // 8.Print Fibonacci series up to 10 terms.
 
-        let Fn = 0, fi = 1 , Fibonacci;
+        let Fn = 0, fi = 1, Fibonacci;
 
-        for(let i = 1; i <= 10; i++ ){
+        for (let i = 1; i <= 10; i++) {
             console.log(Fn);
             Fibonacci = Fn + fi
             Fn = fi
@@ -103,6 +105,57 @@
         }
 
         console.log(Fibonacci);
+
+        // practise Fibonacci series
+
+        let m1 = 0, m2 = 1,Fibonacci2;
+
+        for(let i = 1; i < 10; i++){
+            console.log(m1);
+            Fibonacci2 = m1 + m2;
+            m1 = m2;
+            m2 = Fibonacci2;
+
+        }
+
+        console.log(Fibonacci2);
+
+
+        let ArrayNum = 21;
+
+        // react intership quetion
+        function numValue(n) {
+            if (n < 0) {
+                return "enter a positive value"
+            } else if (n % 2 === 0) {
+                let n1 = n + 2;
+                let n2 = n1 + 2;
+                return `${n},${n1}, ${n2}`
+            } else {
+                let n1 = n + 2;
+                let n2 = n1 + 2;
+                return `${n},${n1}, ${n2}`
+            }
+        }
+
+        console.log(numValue(31));
+
+        // propise fuction
+        let result = new Promise((res,rej) => {
+            if(false){
+                res()
+            }else{
+                rej()
+            }
+
+        })
+        result.then(() => {
+            console.log("response sucees")
+        }).catch(() => {
+            console.log("response reject")
+        })
+
+
 
 
 
@@ -112,4 +165,5 @@
 
     </script>
 </body>
+
 </html>
