updated pet project

--- a/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
@@ -1219,6 +1219,15 @@
         };
 
 
+        let bag1 = 10, bag2 = 20, bag3 = 30;
+        if(bag1 > bag2 && bag1 > bag3){
+            console.loh("bag1 > b and c")
+        }else if(bag2 > bag1 && bag2 > bag3){
+            console.log("bag2 > a and c")
+        }else{
+            console.log("bag3 greter then a b")
+        };
+
         // 17.Question: How can you use an if-else chain to handle multiple conditions ? Answer :
 
         let cont = false;
