--- a/reactjs/SevenReactjs/Projects/PetsAdoption/index.html
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/index.html
@@ -13,6 +13,7 @@
     <style>
       body{
       background-color: #292727; 
+      /* background-color: #fff;  */
       color: #c7c4c4; 
       overflow-x: hidden;
     }
