routing practise in react

--- a/youtube/Css/TextStyling.html
+++ b/youtube/Css/TextStyling.html
@@ -9,12 +9,29 @@
     <link rel="stylesheet" href="style.css">
     <style>
         #defination {
+            height: 200px;
+            border: 5px solid red;
             color: green;
             background-color: yellow;
             padding: 20px;
             margin: 100px 20px;
             text-align:justify;
+            line-height:25px;
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            font-weight: 200;
+            font-style: italic;
+            font-size: 20px;
+            text-transform: lowercase;
+            overflow-x: scroll;
+        }
 
+
+        #defination::-webkit-scrollbar{
+            display: none;
+        }
+
+        b{
+            color: red;
         }
     </style>
 </head>
@@ -26,7 +43,7 @@
         fundamental part of web design, along with HTML Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque,
         architecto? Ipsum eius totam, id eum dolores veniam velit voluptates odit temporibus eligendi quis impedit quia
         laborum accusantium aut incidunt dolor repudiandae et fugit ullam tenetur voluptatibus animi maiores omnis.
-        Repellat eos, pariatur voluptate, totam beatae ex a, nulla adipisci inventore veniam illo maiores. Rerum sint
+        Repellat eos, <b>pariatur voluptate</b>, totam beatae ex a, nulla adipisci inventore veniam illo maiores. Rerum sint
         est officiis quae omnis quos praesentium vero beatae dolorem unde recusandae, fugiat dignissimos assumenda esse
         similique voluptatum minima eligendi? Inventore placeat ratione nesciunt magnam magni natus facilis nihil est
         quia provident aperiam, vitae possimus quam laborum accusamus repellat saepe? Repellat explicabo blanditiis
