--- a/Javascript/JAVASCRIPT/InterView prapation/pracitse-feb-25/Loops.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/pracitse-feb-25/Loops.html
@@ -11,7 +11,8 @@
         <h1>this is loops interview prepration quetion</h1>
     </div>
     
-    <script src="script.js"></script>
-    <script src="script2.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <!-- <script src="script2.js"></script> -->
+    <script src="condStatement.js"></script>
 </body>
 </html>
