--- a/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
@@ -392,7 +392,7 @@
 
                 // function Declaration, function Expression
                 //  first class fuction , high order fuction,curring fun, closer fuction
-                // arrow fuction , contraction fuction , ifie fuction 
+                // arrow fuction , contraction fuction , iife fuction ,callback function
 
 
                 // i.function Declaration
