--- a/reactjs/SevenReactjs/Projects/PetsAdoption/index.html
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/index.html
@@ -12,9 +12,11 @@
 
     <style>
       body{
-      background-color: #292727; 
+      /* background-color: #292727;  */
+      background-color: #F0F1EC; 
       /* background-color: #fff;  */
-      color: #c7c4c4; 
+      /* color: #c7c4c4;  */
+      /* color: #CC7229;  */
       overflow-x: hidden;
     }
 
