--- a/DSA/RestartDSA/Recursion/Recursion.html
+++ b/DSA/RestartDSA/Recursion/Recursion.html
@@ -17,5 +17,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="recurtion2.js"></script>
+    <script src="recurtion3.js"></script>
 </body>
 </html>
