--- a/DSA/RestartDSA/Recursion/Recursion.html
+++ b/DSA/RestartDSA/Recursion/Recursion.html
@@ -19,5 +19,6 @@
     <script src="script.js"></script>
     <script src="recurtion2.js"></script>
     <script src="recurtion3.js"></script>
+    <script src="backtracking.js"></script>
 </body>
 </html>
