updated redux in youtube video

--- a/HTML/revision practice.html
+++ b/HTML/revision practice.html
@@ -194,6 +194,11 @@
     <!-- heading tag -->
     <header>
         <h1>Personal Information</h1>
+        <div class="" style="display: flex; align-items: center; justify-content: space-between;">
+            <p></p>
+             <p>deifexId</p>
+             
+        </div>
     </header>
     <nav>
         <a href="#">Home</a>
